[package]
name = "rustlike"
version = "0.1.0"
authors = ["Stian Soltvedt <soltvedt.stian@gmail.com>"]
repository = "https://github.com/stisol/rustlike"
license = "MIT"

[dependencies]
rand = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
piston = "0.36.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.45.0"
piston2d-opengl_graphics = "0.52.0"